spacing issues for testimonails fixed and navbar issue fixed

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -41,7 +41,7 @@
 .nav-list > .list.-left {
   background: #25272d;
   position: relative;
-  width: 35%;
+  width: 52%;
   opacity: 0.98;
   height: 100%; 
 }
@@ -101,10 +101,7 @@
     display: flex;
     align-items: center; 
   }
-  .nav-list > .list.-left.-right, .nav-list > .list.-right.-right {
-    display: none;
-    z-index: -1; 
-  }
+
   .nav-list > .list > .item {
     margin-left: 1.5rem;
     margin-bottom: 0;
